Fix ticket #1252: SimpleColorEntry is broken in IE6. This fixes an IE quirk where the button type property is readonly, adds some var declerations and sets the width of the button for IE.
svn commit r19659

--- a/www/styles/swat-color-entry.css
+++ b/www/styles/swat-color-entry.css
@@ -54,6 +54,10 @@ td.swat-simple-color-entry-palette-blank {
 	border: none;
 }
 
+button.swat-simple-color-entry-toggle-button {
+	width: 8.25em;
+}
+
 /* SwatColorEntry */
 
 .swat-color-entry-input {
